--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
       <artifactId>slf4j-simple</artifactId>
         <version>1.7.21</version>
    	</dependency>
+   <dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.4</version>
+	</dependency>
   </dependencies>
 </project>
